This filters out historical enrollment data for courses that started before enrollment events went live (Dec 3, 2013)

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -39,6 +39,9 @@ path = s3://fake/manifest/
 [user-activity]
 output_root = s3://fake/activity/
 
+[enrollments]
+blacklist_date = 2014-08-18
+
 [enrollment-reports]
 src = s3://fake/input/
 destination = s3://fake/enrollment_reports/output/
@@ -48,3 +51,4 @@ history = s3://fake/enrollment_reports/enrollment_history.tsv
 
 [geolocation]
 geolocation_data = s3://fake/geo.dat
+
