This computes historical user activity by day and stores the result in hive

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -3,6 +3,7 @@
 [hive]
 release = apache
 database = default
+warehouse_path = s3://fake_warehouse_path/
 
 [database-export]
 database = to_database
