--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ edx.analytics.tasks =
     export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
     last-country = edx.analytics.tasks.user_location:LastCountryForEachUser
     export-events = edx.analytics.tasks.event_exports:EventExportTask
-    user-activity = edx.analytics.tasks.user_activity:UserActivityBaseTask
+    user-activity = edx.analytics.tasks.user_activity:UserActivityPerDayTask
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
