--- a/config/local.cfg
+++ b/config/local.cfg
@@ -6,6 +6,7 @@ marker = /tmp/antasks/marker/
 
 [event-logs]
 source = /tmp/antasks/input/
+pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
 
 [manifest]
 path = /tmp/antasks/manifest/
