This computes historical user activity by day and stores the result in hive

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -3,6 +3,7 @@
 [hive]
 release = apache
 database = default
+warehouse_path = s3://fake/warehouse/
 
 [database-export]
 database = to_database
@@ -52,3 +53,6 @@ history = s3://fake/enrollment_reports/enrollment_history.tsv
 [geolocation]
 geolocation_data = s3://fake/geo.dat
 
+[calendar]
+interval = 2012-01-01-2050-01-01
+fiscal_year_begins = 7
