--- a/setup.cfg
+++ b/setup.cfg
@@ -32,11 +32,12 @@ edx.analytics.tasks =
     export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
     last-country = edx.analytics.tasks.user_location:LastCountryForEachUser
     export-events = edx.analytics.tasks.event_exports:EventExportTask
-    user-activity = edx.analytics.tasks.user_activity:UserActivityBaseTask
+    user-activity = edx.analytics.tasks.user_activity:UserActivityWorkflow
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
     course-facts-to-mysql = edx.analytics.tasks.daily_enrollment_trends:ImportCourseDailyFactsIntoMysql
+    calendar = edx.analytics.tasks.calendar:ImportCalendarToHiveTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
