Integrate with opaque_keys package for checking course_ids.
Also change to running Python 2.7 on clusters, since opaque keys
requires that.

* Export opaque keys and dependencies to worker instances in Hadoop.
* Support for checking if course_id is valid.
* Rudimentary support for getting course_id from URL.
* Make sure filenames from course_ids are legal, replacing characters as
  needed.
* Identify organization for each event as close to original algorithm as
  possible on existing data, but working for opaque keys as well.

Acked-by: Brian Wilson <brian@edx.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27
+envlist=py27
 
 # tox does not update the virtualenv after changes to requirement files.
 # http://bitbucket.org/hpk42/tox/issue/149/virtualenv-is-not-recreated-when-deps
@@ -10,9 +10,6 @@ deps=-r{toxinidir}/requirements/default.txt
 setenv =
     LUIGI_CONFIG_PATH = {toxinidir}/config/test.cfg
 commands=nosetests -A 'not acceptance'
-
-[testenv:py26]
-install_command=pip install --download-cache=/tmp/tox/cache {env:TOX_PY26_USE_WHEEL} --pre --allow-external argparse --allow-external mysql-connector-python {opts} {packages}
 
 [testenv:py27]
 install_command=pip install --download-cache=/tmp/tox/cache {env:TOX_PY27_USE_WHEEL} --pre --allow-external argparse --allow-external mysql-connector-python {opts} {packages}
