--- a/share/task.yml
+++ b/share/task.yml
@@ -20,7 +20,7 @@
     - log_dir: "{{ root_log_dir }}/{{ uuid}}"
     - working_repo_dir: "{{ working_dir }}/repo"
     - working_venv_dir: "{{ working_dir }}/venv"
-    - virtualenv_python: "--python=/usr/bin/python2.7"
+    - virtualenv_python: "/usr/bin/python2.7"
     - task_arguments: ''
     - git_servers:
         # Analytics repositories are currently hosted on github.
@@ -96,7 +96,7 @@
 
     - name: virtualenv created
       command: >
-        virtualenv {{ virtualenv_python }} {{ working_venv_dir }}
+        virtualenv --python={{ virtualenv_python }} {{ working_venv_dir }}
 
     - name: update pip
       command: >
