Fix blacklist acceptance test

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -41,6 +41,7 @@ output_root = s3://fake/activity/
 
 [enrollments]
 blacklist_date = 2014-08-18
+blacklist_path = s3://fake/blacklist/
 
 [enrollment-reports]
 src = s3://fake/input/
