--- a/share/task.yml
+++ b/share/task.yml
@@ -20,7 +20,6 @@
     - log_dir: "{{ root_log_dir }}/{{ uuid}}"
     - working_repo_dir: "{{ working_dir }}/repo"
     - working_venv_dir: "{{ working_dir }}/venv"
-    - virtualenv_python: "/usr/bin/python2.7"
     - task_arguments: ''
     - git_servers:
         # Analytics repositories are currently hosted on github.
@@ -31,8 +30,8 @@
     - install_env:
         # EMR runs a modified version of Debian 6 (squeeze)
         WHEEL_URL: http://edx-wheelhouse.s3-website-us-east-1.amazonaws.com/Debian/squeeze
-        # EMR ships with python 2.7
-        WHEEL_PYVER: 2.7
+        # EMR ships with python 2.6 (unfortunately)
+        WHEEL_PYVER: 2.6
 
     # - override_config: path/to/config.cfg (optionally adds a luigi config override)
 
@@ -96,7 +95,7 @@
 
     - name: virtualenv created
       command: >
-        virtualenv --python={{ virtualenv_python }} {{ working_venv_dir }}
+        virtualenv {{ working_venv_dir }}
 
     - name: update pip
       command: >
