Breakdown historical enrollment trends by demographic traits

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -3,6 +3,7 @@
 [hive]
 release = apache
 database = default
+warehouse_path = s3://fake/warehouse/
 
 [database-export]
 database = to_database
@@ -41,7 +42,6 @@ output_root = s3://fake/activity/
 
 [enrollments]
 blacklist_date = 2014-08-18
-blacklist_path = s3://fake/blacklist/
 
 [enrollment-reports]
 src = s3://fake/input/
