--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ edx.analytics.tasks =
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
     course-facts-to-mysql = edx.analytics.tasks.daily_enrollment_trends:ImportCourseDailyFactsIntoMysql
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
+    enrollments = edx.analytics.tasks.enrollments:ImportDemographicsIntoMysql
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
