--- a/setup.cfg
+++ b/setup.cfg
@@ -30,12 +30,11 @@ edx.analytics.tasks =
     sqoop-import = edx.analytics.tasks.sqoop:SqoopImportFromMysql
     dump-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseTask
     export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
-    last-country = edx.analytics.tasks.user_location:LastCountryForEachUser
     export-events = edx.analytics.tasks.event_exports:EventExportTask
     user-activity = edx.analytics.tasks.user_activity:UserActivityBaseTask
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
-    location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
+    location-per-course = edx.analytics.tasks.location_per_course:EnrollmentByLocationTask
     course-facts-to-mysql = edx.analytics.tasks.daily_enrollment_trends:ImportCourseDailyFactsIntoMysql
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportDemographicsIntoMysql
