--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ edx.analytics.tasks =
     course-facts-to-mysql = edx.analytics.tasks.daily_enrollment_trends:ImportCourseDailyFactsIntoMysql
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportDemographicsIntoMysql
+    enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
