Add support for multiple event patterns.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -20,6 +20,7 @@ marker = s3://fake/marker/
 
 [event-logs]
 pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
+          .*tracking.notalog-(?P<date>\d{8}).*\.gz
 expand_interval = 2 days
 source = s3://fake/input/
          s3://fake/input2/
