direct access tasks

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ edx.analytics.tasks =
     course-facts-to-mysql = edx.analytics.tasks.daily_enrollment_trends:ImportCourseDailyFactsIntoMysql
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportDemographicsIntoMysql
+    direct-access = edx.analytics.tasks.user_activity_da:DirectAccessLifetimeTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
