--- a/share/ec2.ini
+++ b/share/ec2.ini
@@ -1,5 +1,5 @@
 [ec2]
-regions=us-east-1
+regions=us-west-1
 destination_variable=route53_domain_name
 backup_destination_variable=private_ip_address
 cache_path=/tmp
