--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ edx.analytics.tasks =
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportDemographicsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
+    event_collocation = edx.analytics.tasks.event_collocation:UserCollocationTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
