--- a/config/docker.cfg
+++ b/config/docker.cfg
@@ -33,8 +33,8 @@ required_path_text = FakeServerGroup
 
 [manifest]
 threshold = 500
-input_format = oddjob.ManifestTextInputFormat
-lib_jar = hdfs://localhost:9000/edx-analytics-pipeline/packages/oddjob.jar
+input_format = org.edx.hadoop.input.ManifestTextInputFormat
+lib_jar = hdfs://localhost:9000/edx-analytics-pipeline/packages/edx-analytics-hadoop-util.jar
 path = hdfs://localhost:9000/edx-analytics-pipeline/manifest/
 
 [user-activity]
