Fix blacklist path

--- a/config/docker.cfg
+++ b/config/docker.cfg
@@ -42,6 +42,7 @@ output_root = hdfs://localhost:9000/edx-analytics-pipeline/activity/
 
 [enrollments]
 blacklist_date = 2014-08-18
+blacklist_path = hdfs://localhost:9000/edx-analytics-pipeline/blacklist/
 
 [enrollment-reports]
 src = hdfs://localhost:9000/edx-analytics-pipeline/data/
