--- a/config/docker.cfg
+++ b/config/docker.cfg
@@ -3,53 +3,53 @@
 [hive]
 release = apache
 database = default
-warehouse_path = hdfs://localhost:9000/edx-analytics-pipeline/warehouse/
+warehouse_path = hdfs://hadoop:9000/edx-analytics-pipeline/warehouse/
 
 [database-export]
 database = to_database
-credentials = hdfs://localhost:9000/edx-analytics-pipeline/output/local.json
+credentials = hdfs://hadoop:9000/edx-analytics-pipeline/output/local.json
 
 [database-import]
 database = from_database
-credentials = hdfs://localhost:9000/edx-analytics-pipeline/input/credentials.json
-destination = hdfs://localhost:9000/edx-analytics-pipeline/warehouse/
+credentials = hdfs://hadoop:9000/edx-analytics-pipeline/input/credentials.json
+destination = hdfs://hadoop:9000/edx-analytics-pipeline/warehouse/
 
 [map-reduce]
 engine = hadoop
-marker = hdfs://localhost:9000/edx-analytics-pipeline/marker/
+marker = hdfs://hadoop:9000/edx-analytics-pipeline/marker/
 
 [event-logs]
 pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
 expand_interval = 2 days
-source = hdfs://localhost:9000/data/
+source = hdfs://hadoop:9000/data/
 
 [event-export]
-output_root = hdfs://localhost:9000/edx-analytics-pipeline/event-export/output/
+output_root = hdfs://hadoop:9000/edx-analytics-pipeline/event-export/output/
 environment = unittest
-config = hdfs://localhost:9000/edx-analytics-pipeline/event_export/config.yaml
-gpg_key_dir = hdfs://localhost:9000/edx-analytics-pipeline/event_export/gpg-keys/
+config = hdfs://hadoop:9000/edx-analytics-pipeline/event_export/config.yaml
+gpg_key_dir = hdfs://hadoop:9000/edx-analytics-pipeline/event_export/gpg-keys/
 gpg_master_key = master@key.org
 required_path_text = FakeServerGroup
 
 [manifest]
 threshold = 500
 input_format = org.edx.hadoop.input.ManifestTextInputFormat
-lib_jar = hdfs://localhost:9000/edx-analytics-pipeline/packages/edx-analytics-hadoop-util.jar
-path = hdfs://localhost:9000/edx-analytics-pipeline/manifest/
+lib_jar = hdfs://hadoop:9000/edx-analytics-pipeline/packages/edx-analytics-hadoop-util.jar
+path = hdfs://hadoop:9000/edx-analytics-pipeline/manifest/
 
 [user-activity]
-output_root = hdfs://localhost:9000/edx-analytics-pipeline/activity/
+output_root = hdfs://hadoop:9000/edx-analytics-pipeline/activity/
 
 [enrollments]
 blacklist_date = 2014-08-18
-blacklist_path = hdfs://localhost:9000/edx-analytics-pipeline/blacklist/
+blacklist_path = hdfs://hadoop:9000/edx-analytics-pipeline/blacklist/
 
 [enrollment-reports]
-src = hdfs://localhost:9000/edx-analytics-pipeline/data/
-destination = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/output/
-offsets = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/offsets.tsv
-blacklist = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/course_blacklist.tsv
-history = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/enrollment_history.tsv
+src = hdfs://hadoop:9000/edx-analytics-pipeline/data/
+destination = hdfs://hadoop:9000/edx-analytics-pipeline/enrollment_reports/output/
+offsets = hdfs://hadoop:9000/edx-analytics-pipeline/enrollment_reports/offsets.tsv
+blacklist = hdfs://hadoop:9000/edx-analytics-pipeline/enrollment_reports/course_blacklist.tsv
+history = hdfs://hadoop:9000/edx-analytics-pipeline/enrollment_reports/enrollment_history.tsv
 
 [geolocation]
-geolocation_data = hdfs://localhost:9000/edx-analytics-pipeline/geo.dat
+geolocation_data = hdfs://hadoop:9000/edx-analytics-pipeline/geo.dat
