Add total events daily task.
This calculates the total number of events per day.

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ edx.analytics.tasks =
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
+    overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
