Support ssh connections to arbitrary hosts

--- a/share/task.yml
+++ b/share/task.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: Configure luigi
-  hosts: "mr_{{ name }}_master"
+  hosts: "{{ name }}"
   gather_facts: False
   sudo: True
   roles:
     - luigi
 
 - name: Run a task
-  hosts: "mr_{{ name }}_master"
+  hosts: "{{ name }}"
   gather_facts: False
 
   vars:
