User activity aggregates

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -55,3 +55,5 @@ history = s3://fake/enrollment_reports/enrollment_history.tsv
 [geolocation]
 geolocation_data = s3://fake/geo.dat
 
+[calendar]
+interval = 2012-01-01-2020-01-01
