--- a/setup.cfg
+++ b/setup.cfg
@@ -32,13 +32,14 @@ edx.analytics.tasks =
     export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
     last-country = edx.analytics.tasks.user_location:LastCountryForEachUser
     export-events = edx.analytics.tasks.event_exports:EventExportTask
-    user-activity = edx.analytics.tasks.user_activity:UserActivityBaseTask
+    user-activity = edx.analytics.tasks.user_activity:CourseActivityWeeklyTask
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
+    calendar = edx.analytics.tasks.calendar:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
 
 mapreduce.engine =
