Report total events of a given time period in a CSV, sorted by date.

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ edx.analytics.tasks =
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
     calendar = edx.analytics.tasks.calendar:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
+    all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
