--- a/config/test.cfg
+++ b/config/test.cfg
@@ -17,6 +17,7 @@ destination = s3://fake/warehouse/
 [map-reduce]
 engine = hadoop
 marker = s3://fake/marker/
+remote_log_level = DEBUG
 
 [event-logs]
 pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
