--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ edx.analytics.tasks =
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
+    canonicalization = edx.analytics.tasks.canonicalization:CanonicalizationTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
