--- a/share/task.yml
+++ b/share/task.yml
@@ -40,6 +40,7 @@
     - secure_config_branch: origin/release
     - secure_config_repo_dir: "{{ working_dir }}/config"
     # - secure_config: path/to/config.cfg which can be found in the secure config repo
+    - profile: False
 
   tasks:
     - name: known_hosts file exists
@@ -153,6 +154,8 @@
       poll: 0
       sudo: True
       sudo_user: hadoop
+      environment:
+        ENABLE_PROFILING: "{{ profile }}"
       when: not wait_for_task
 
     - name: task run (wait for completion)
@@ -163,6 +166,8 @@
       sudo: True
       sudo_user: hadoop
       ignore_errors: yes
+      environment:
+        ENABLE_PROFILING: "{{ profile }}"
       register: task_result
       when: wait_for_task
 
