--- a/logging.cfg
+++ b/logging.cfg
@@ -29,7 +29,7 @@ propagate=0
 [logger_luigi_interface]
 # Errors from luigi-interface get routed to stdout.
 level=INFO
-handlers=luigiHandler
+handlers=luigiHandler,localHandler
 qualname=luigi-interface
 propagate=0
 
