Support log analysis for performance benchmark

--- a/logging.cfg
+++ b/logging.cfg
@@ -28,8 +28,8 @@ propagate=0
 
 [logger_luigi_interface]
 # Errors from luigi-interface get routed to stdout.
-level=INFO
-handlers=luigiHandler
+level=DEBUG
+handlers=luigiHandler,localHandler
 qualname=luigi-interface
 propagate=0
 
