Support log analysis for performance benchmark

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ data_files =
 console_scripts =
     launch-task = edx.analytics.tasks.launchers.local:main
     remote-task = edx.analytics.tasks.launchers.remote:main
+    analyze-log = edx.analytics.tasks.launchers.analyze.main:analyze
 
 edx.analytics.tasks =
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
@@ -42,6 +43,7 @@ edx.analytics.tasks =
     calendar = edx.analytics.tasks.calendar:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
+    noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
