--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ edx.analytics.tasks =
     calendar = edx.analytics.tasks.calendar:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
+    grep = edx.analytics.tasks.tools:Grep
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
