Misc tools for analyzing the event log

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ console_scripts =
     s3util = edx.analytics.tasks.launchers.s3util:main
 
 edx.analytics.tasks =
+    grep = edx.analytics.tasks.tools:Grep
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
     total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
     inc-enrollments-report = edx.analytics.tasks.reports.incremental_enrollments:WeeklyIncrementalUsersAndEnrollments
