--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ data_files =
 console_scripts =
     launch-task = edx.analytics.tasks.launchers.local:main
     remote-task = edx.analytics.tasks.launchers.remote:main
-    analyze-log = edx.analytics.tasks.launchers.analyze.main:analyze_log_file
+    analyze-log = edx.analytics.tasks.launchers.analyze.main:analyze
 
 edx.analytics.tasks =
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
