--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ edx.analytics.tasks =
     calendar = edx.analytics.tasks.calendar:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
-    noop = edx.analytics.tasks.performance:StartupTimeTestTask
+    noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
