--- a/share/task.yml
+++ b/share/task.yml
@@ -40,6 +40,7 @@
     - secure_config_branch: origin/release
     - secure_config_repo_dir: "{{ working_dir }}/config"
     # - secure_config: path/to/config.cfg which can be found in the secure config repo
+    - workflow_profiler: ""
 
   tasks:
     - name: known_hosts file exists
@@ -153,6 +154,9 @@
       poll: 0
       sudo: True
       sudo_user: hadoop
+      environment:
+        WORKFLOW_PROFILER: "{{workflow_profiler}}"
+        WORKFLOW_PROFILER_PATH: "{{ log_dir }}"
       when: not wait_for_task
 
     - name: task run (wait for completion)
@@ -163,6 +167,9 @@
       sudo: True
       sudo_user: hadoop
       ignore_errors: yes
+      environment:
+        WORKFLOW_PROFILER: "{{workflow_profiler}}"
+        WORKFLOW_PROFILER_PATH: "{{ log_dir }}"
       register: task_result
       when: wait_for_task
 
@@ -172,6 +179,7 @@
         - stdout
         - stderr
         - edx_analytics.log
+        - launch-task.trace
       ignore_errors: yes
       when: wait_for_task
 
