Make boto try harder when attempting to read credentials

--- a/share/task.yml
+++ b/share/task.yml
@@ -132,5 +132,8 @@
       copy: src={{ override_config }} dest={{ working_repo_dir }}/override.cfg mode=644
       when: override_config is defined
 
+    - name: boto configured
+      copy: src=boto.cfg dest={{ working_repo_dir }}/.boto mode=644
+
     - name: show working directory
       debug: var=working_repo_dir
