Specify luigi version

--- a/config/docker.cfg
+++ b/config/docker.cfg
@@ -1,8 +1,8 @@
 # Settings that can be used when running inside of a docker container
 [hadoop]
 version: cdh4
-command: /home/hadoop/bin/hadoop
-streaming-jar: /home/hadoop/hadoop-2.3.0/share/hadoop/tools/lib/hadoop-streaming-2.3.0.jar
+command: /home/hadoop/hadoop/bin/hadoop
+streaming-jar: /home/hadoop/hadoop/share/hadoop/tools/lib/hadoop-streaming-2.3.0.jar
 
 [hive]
 release = apache
