Calculate per-student engagement per course.
* Write out results as per-course CSV files.
* Add interval_start and interval_end parameters to course enrollment
  tasks, and define default values for these.

Still needs unit tests.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -44,7 +44,7 @@ path = s3://fake/manifest/
 output_root = s3://fake/activity/
 
 [enrollments]
-blacklist_date = 2014-08-18
+interval_start = 2013-11-01
 
 [enrollment-reports]
 src = s3://fake/input/
