--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ edx.analytics.tasks =
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
-    student_engagement = edx.analytics.tasks.student_engagement:ParseEventLogPerformanceTask
+    student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
