--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ edx.analytics.tasks =
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
+    video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
