--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ console_scripts =
     launch-task = edx.analytics.tasks.launchers.local:main
     remote-task = edx.analytics.tasks.launchers.remote:main
     analyze-log = edx.analytics.tasks.launchers.analyze.main:analyze
+    s3util = edx.analytics.tasks.launchers.s3util:main
 
 edx.analytics.tasks =
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
