Add command-line tool for creating curated enrollment event files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ console_scripts =
     s3util = edx.analytics.tasks.tools.s3util:main
     obfuscate-eval = edx.analytics.tasks.tools.obfuscate_eval:main
     debug-emr-logs = edx.analytics.tasks.tools.debug_emr_logs:main
+    curate = edx.analytics.tasks.tools.curate:main
 
 edx.analytics.tasks =
 
