--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ edx.analytics.tasks =
     load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
     load-d-course = edx.analytics.tasks.load_internal_reporting_course:LoadInternalReportingCourseToWarehouse
     shopping_cart = edx.analytics.tasks.reports.shopping_cart_import:PullFromShoppingCartTablesTask
+    payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
