Implement Cybersource payment download by date.
Acked-by: Brian Wilson <brian@edx.org>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ edx.analytics.tasks =
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     shopping_cart = edx.analytics.tasks.reports.shopping_cart_import:PullFromShoppingCartTablesTask
+    payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
