fix hadoop settings format, use existing credentials

--- a/config/docker.cfg
+++ b/config/docker.cfg
@@ -1,8 +1,8 @@
 # Settings that can be used when running inside of a docker container
 [hadoop]
-version: cdh4
-command: /home/hadoop/hadoop/bin/hadoop
-streaming-jar: /home/hadoop/hadoop/share/hadoop/tools/lib/hadoop-streaming-2.3.0.jar
+version = cdh4
+command = /home/hadoop/hadoop/bin/hadoop
+streaming-jar = /home/hadoop/hadoop/share/hadoop/tools/lib/hadoop-streaming-2.3.0.jar
 
 [hive]
 release = apache
@@ -10,12 +10,12 @@ database = default
 warehouse_path = hdfs://localhost:9000/edx-analytics-pipeline/warehouse/
 
 [database-export]
-database = to_database
-credentials = mysql://root@127.0.0.1/
+database = reports_2_0
+credentials = /var/tmp/database.json
 
 [database-import]
-database = from_database
-credentials = mysql://root@127.0.0.1/
+database = edxapp
+credentials = /var/tmp/database.json
 destination = hdfs://localhost:9000/edx-analytics-pipeline/warehouse/
 
 [map-reduce]
