Added order import tasks for financial report.

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,8 +51,9 @@ edx.analytics.tasks =
     load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
     load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
     load-d-course = edx.analytics.tasks.load_internal_reporting_course:LoadInternalReportingCourseToWarehouse
-    shopping_cart = edx.analytics.tasks.reports.shopping_cart_import:PullFromShoppingCartTablesTask
     payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
+    shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
+    ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
