--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ edx.analytics.tasks =
     load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
     load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
     load-d-course = edx.analytics.tasks.load_internal_reporting_course:LoadInternalReportingCourseToWarehouse
+    shopping_cart = edx.analytics.tasks.reports.shopping_cart_import:PullFromShoppingCartTablesTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
