--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,8 @@ edx.analytics.tasks =
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
+    shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
+    ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
