Adds a series of pipeline tasks to process the course subject data from the course catalog and add it to the warehouse.  Also includes a general luigi Vertica target and bulk loading task classes.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -58,3 +58,10 @@ geolocation_data = s3://fake/geo.dat
 
 [calendar]
 interval = 2012-01-01-2020-01-01
+
+[course-catalog]
+catalog_url = http://acceptance.test/api/courses/v2
+
+[vertica-export]
+credentials = s3://fake/vertica_creds.json
+schema = testing
