Initial reconciliation logic.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ edx.analytics.tasks =
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     shopping_cart = edx.analytics.tasks.reports.shopping_cart_import:PullFromShoppingCartTablesTask
     payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
+    payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
