Add reconciliation of cybersource transactions against shoppingcart orders.

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ edx.analytics.tasks =
     shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
     ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
+    payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
