Restore cybersource task.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ edx.analytics.tasks =
     payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
     ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
+    cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
