Restore cybersource task.

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ edx.analytics.tasks =
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
     ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
+    cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
