Wrote a luigi target for  loading into Vertica, a Vertica bulkloading task, and an overarching workflow for the course subject integration.

--- a/client.cfg
+++ b/client.cfg
@@ -1,34 +1,32 @@
-[hadoop]
-version = apache1
-python-executable=/usr/bin/python2.7
-
-[hdfs]
-client = hadoopcli
-
-[hive]
-release = apache
-database = default
-
 [database-export]
-database = reports
+database = analytics
+credentials = ~/mysql_creds
+
+[vertica-export]
+database = jrowan
+credentials = vertica_creds
 
 [database-import]
-database = wwc
-
-[core]
-logging_conf_file=logging.cfg
-hdfs-tmp-dir=/tmp/luigi/partial
-
-[map-reduce]
-engine = hadoop
-remote_log_level = INFO
+database = edxprod
+destination = s3://<bucket for intermediate hadoop products>/intermediate/database-import
+credentials = s3://<secrets bucket>/edxapp_prod_ro_mysql_creds
 
 [event-logs]
 expand_interval = 2 days
+pattern = .*tracking.log-(?P<date>[0-9]+).*
+source = s3://<bucket to where all tracking logs are synched>/tracking/
+
+[hive]
+warehouse_path = http://s3.amazonaws.com/edx-analytics-scratch/jrowan/hive
 
 [manifest]
-threshold = 500
+path = s3://<bucket for intermediate hadoop products>/user-activity-file-manifests/manifest
+lib_jar = s3://<secrets bucket>/oddjob-1.0.1-standalone-modified.jar
 input_format = oddjob.ManifestTextInputFormat
 
+[enrollments]
+blacklist_date = 2001-01-01
+blacklist_path = /tmp/blacklist
+
 [answer-distribution]
-valid_response_types = choiceresponse,optionresponse,multiplechoiceresponse,numericalresponse,stringresponse,formularesponse
+valid_response_types = customresponse,choiceresponse,optionresponse,multiplechoiceresponse,numericalresponse,stringresponse,formularesponse
