--- a/setup.cfg
+++ b/setup.cfg
@@ -41,12 +41,13 @@ edx.analytics.tasks =
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
-    calendar = edx.analytics.tasks.calendar:CalendarTableTask
+    calendar = edx.analytics.tasks.calendar_task:CalendarTableTask
     overall_events = edx.analytics.tasks.overall_events:TotalEventsDailyTask
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
+    catalog = edx.analytics.tasks.course_catalog:DailyPullCatalogFromDrupalTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
