--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,8 @@ edx.analytics.tasks =
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
     paypal = edx.analytics.tasks.reports.paypal:RawPaypalTransactionLogTask
+    course-info = edx.analytics.tasks.reports.data_import.coursemode_imports:CourseModeTableTask
+    ed_services_report = edx.analytics.tasks.reports.financial_report.ed_services_financial_report:BuildEdServicesReportTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
