Add multi-orderitem support.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -69,3 +69,8 @@ access_token = acceptance
 [vertica-export]
 credentials = s3://fake/vertica_creds.json
 schema = testing
+
+[payment-reconciliation]
+transaction_source = s3://fake/warehouse/transactions
+order_source = s3://fake/warehouse/orders
+pattern = '*'
