Add multi-orderitem support.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -58,3 +58,8 @@ geolocation_data = s3://fake/geo.dat
 
 [calendar]
 interval = 2012-01-01-2020-01-01
+
+[payment-reconciliation]
+transaction_source = s3://fake/warehouse/transactions
+order_source = s3://fake/warehouse/orders
+pattern = '*'
