Download paypal transactions

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ edx.analytics.tasks =
     ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
+    paypal = edx.analytics.tasks.reports.paypal:RawPaypalTransactionLogTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
