Added unit and acceptance tests, and did some refactoring and reconfiguring in response to PR comments.

--- a/client.cfg
+++ b/client.cfg
@@ -1,32 +1,34 @@
-[database-export]
-database = analytics
-credentials = ~/mysql_creds
+[hadoop]
+version = apache1
+python-executable=/usr/bin/python2.7
 
-[vertica-export]
-database = jrowan
-credentials = vertica_creds
+[hdfs]
+client = hadoopcli
+
+[hive]
+release = apache
+database = default
+
+[database-export]
+database = reports
 
 [database-import]
-database = edxprod
-destination = s3://<bucket for intermediate hadoop products>/intermediate/database-import
-credentials = s3://<secrets bucket>/edxapp_prod_ro_mysql_creds
+database = wwc
+
+[core]
+logging_conf_file=logging.cfg
+hdfs-tmp-dir=/tmp/luigi/partial
+
+[map-reduce]
+engine = hadoop
+remote_log_level = INFO
 
 [event-logs]
 expand_interval = 2 days
-pattern = .*tracking.log-(?P<date>[0-9]+).*
-source = s3://<bucket to where all tracking logs are synched>/tracking/
-
-[hive]
-warehouse_path = http://s3.amazonaws.com/edx-analytics-scratch/jrowan/hive
 
 [manifest]
-path = s3://<bucket for intermediate hadoop products>/user-activity-file-manifests/manifest
-lib_jar = s3://<secrets bucket>/oddjob-1.0.1-standalone-modified.jar
+threshold = 500
 input_format = oddjob.ManifestTextInputFormat
 
-[enrollments]
-blacklist_date = 2001-01-01
-blacklist_path = /tmp/blacklist
-
 [answer-distribution]
-valid_response_types = customresponse,choiceresponse,optionresponse,multiplechoiceresponse,numericalresponse,stringresponse,formularesponse
+valid_response_types = choiceresponse,optionresponse,multiplechoiceresponse,numericalresponse,stringresponse,formularesponse
