--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ edx.analytics.tasks =
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
-    catalog = edx.analytics.tasks.course_catalog:DailyPullCatalogFromDrupalTask
+    catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
