--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ edx.analytics.tasks =
     paypal = edx.analytics.tasks.reports.paypal:PaypalTransactionsByDayTask
     ed_services_report = edx.analytics.tasks.reports.ed_services_financial_report:BuildEdServicesReportTask
     financial_reports  = edx.analytics.tasks.reports.finance_reports:BuildFinancialReportsTask
+    user-profiles = edx.analytics.tasks.user_profiles:InsertToMysqlUserProfilesTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
