Added the entry point for the events to vertica task

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ edx.analytics.tasks =
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
     canonicalization = edx.analytics.tasks.canonicalization:CanonicalizationTask
+    events-to-vertica = edx.analytics.tasks.events_to_warehouse:VerticaEventLoadingTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
