Use the XML reporting API

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -74,3 +74,11 @@ schema = testing
 transaction_source = s3://fake/warehouse/transactions
 order_source = s3://fake/warehouse/orders
 pattern = '*'
+
+[paypal]
+vendor = testvendor
+password = notsosecret
+user = testuser
+partner = testpartner
+url = http://test.api/endpoint
+timeout = -1
