Use the XML reporting API

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -63,3 +63,11 @@ interval = 2012-01-01-2020-01-01
 transaction_source = s3://fake/warehouse/transactions
 order_source = s3://fake/warehouse/orders
 pattern = '*'
+
+[paypal]
+vendor = testvendor
+password = notsosecret
+user = testuser
+partner = testpartner
+url = http://test.api/endpoint
+timeout = -1
