--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ edx.analytics.tasks =
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
+    canonicalization = edx.analytics.tasks.canonicalization:CanonicalizationTask
+    events-to-vertica = edx.analytics.tasks.events_to_warehouse:VerticaEventLoadingTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
