Toward Typology/Trajectory: associate each problem/video w/ a chapter

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ edx.analytics.tasks =
     all_events_report = edx.analytics.tasks.reports.total_events_report:TotalEventsReportWorkflow
     noop = edx.analytics.tasks.performance:ParseEventLogPerformanceTask
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
+    trajectory = edx.analytics.tasks.trajectory:TrajectoryPipelineTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
 
