Pipeline task to load the internal reporting course information table, replacing the old pentaho task.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -62,6 +62,10 @@ interval = 2012-01-01-2020-01-01
 [course-catalog]
 catalog_url = http://acceptance.test/api/courses/v2
 
+[course-structure]
+api_root = acceptance.test
+access_token = acceptance
+
 [vertica-export]
 credentials = s3://fake/vertica_creds.json
 schema = testing
