Developed pipeline replacements for the pentaho tasks to load the tables d_user and f_user activity into the warehouse.

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,8 @@ edx.analytics.tasks =
     student_engagement = edx.analytics.tasks.student_engagement:StudentEngagementTask
     video = edx.analytics.tasks.video:InsertToMysqlAllVideoTask
     catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
+    load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
+    load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
