Support a single financial reporting entry point

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -38,7 +38,7 @@ required_path_text = FakeServerGroup
 threshold = 500
 input_format = oddjob.ManifestTextInputFormat
 lib_jar = s3://fake/oddjob.jar
-path = s3://fake/manifest/
+path = /tmp/fake/manifest/
 
 [user-activity]
 output_root = s3://fake/activity/
