--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ edx.analytics.tasks =
     paypal = edx.analytics.tasks.reports.paypal:PaypalTransactionsByDayTask
     course-info = edx.analytics.tasks.reports.data_import.coursemode_imports:CourseModeTableTask
     ed_services_report = edx.analytics.tasks.reports.financial_report.ed_services_financial_report:BuildEdServicesReportTask
+    financial_reports  = edx.analytics.tasks.reports.financial_report.finance_reports:BuildFinancialReportsTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
