--- a/config/test.cfg
+++ b/config/test.cfg
@@ -45,6 +45,7 @@ output_root = s3://fake/activity/
 
 [enrollments]
 interval_start = 2013-11-01
+interval_end = 2020-01-01
 
 [enrollment-reports]
 src = s3://fake/input/
