Partial implementation of grade pipeline

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ edx.analytics.tasks =
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
+    grades = edx.analytics.tasks.grades:GradesPipelineTask
     enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
     calendar = edx.analytics.tasks.calendar_task:CalendarTableTask
