Responses to code review comments

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -63,7 +63,7 @@ interval = 2012-01-01-2020-01-01
 catalog_url = http://acceptance.test/api/courses/v2
 
 [course-structure]
-api_root = acceptance.test
+api_root_url = acceptance.test
 access_token = acceptance
 
 [vertica-export]
