Added Task to load f_user_course into the warehouse via the pipeline.

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ edx.analytics.tasks =
     catalog = edx.analytics.tasks.course_catalog:CourseCatalogWorkflow
     load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
     load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
+    load-internal-user-course = edx.analytics.tasks.load_internal_reporting_user_course:LoadInternalReportingUserCourseToWarehouse
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
