Fixed end-of-video dropoff by cutting off at a sharp drop to less than 5% of the users.

--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -54,3 +54,7 @@ geolocation_data = hdfs://localhost:9000/edx-analytics-pipeline/geo.dat
 
 [calendar]
 interval = 2012-01-01-2020-01-01
+
+[videos]
+dropoff_threshold = 0.05
+
