--- a/config/test.cfg
+++ b/config/test.cfg
@@ -100,3 +100,6 @@ interval_start = 2015-09-01
 [payment]
 cybersource_merchant_ids = test
                            empty_test
+
+[videos]
+dropoff_threshold = 0.05
