Acceptance test for financial reports

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -76,9 +76,27 @@ order_source = s3://fake/warehouse/orders
 pattern = '*'
 
 [paypal]
+account_id = test
 vendor = testvendor
 password = notsosecret
 user = testuser
 partner = testpartner
 url = http://test.api/endpoint
 timeout = -1
+interval_start = 2015-09-01
+
+[cybersource:test]
+username=testuser
+password=notsosecret
+host=test.cybersource.com/test
+interval_start = 2015-09-01
+
+[cybersource:empty_test]
+username=testuser
+password=notsosecret
+host=test.cybersource.com/test
+interval_start = 2015-09-01
+
+[payment]
+cybersource_merchant_ids = test
+                           empty_test
