--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,7 @@ edx.analytics.tasks =
     load-d-user = edx.analytics.tasks.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
     load-f-user-activity = edx.analytics.tasks.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
     load-d-course = edx.analytics.tasks.load_internal_reporting_course:LoadInternalReportingCourseToWarehouse
-    payments_report = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
-    shopping_cart = edx.analytics.tasks.reports.orders_import:PullFromShoppingCartTablesTask
-    ecommerce = edx.analytics.tasks.reports.orders_import:PullFromEcommerceTablesTask
+    orders = edx.analytics.tasks.reports.orders_import:OrderTableTask
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
     paypal = edx.analytics.tasks.reports.paypal:PaypalTransactionsByDayTask
