--- a/share/task.yml
+++ b/share/task.yml
@@ -12,7 +12,7 @@
 
 - name: Run a task
   hosts: "{{ name }}"
-  gather_facts: True
+  gather_facts: False
 
   vars:
     - repo: git@github.com:edx/edx-analytics-pipeline.git
@@ -43,12 +43,19 @@
     # - secure_config: path/to/config.cfg which can be found in the secure config repo
 
   tasks:
+    - name: find home directory
+      shell: echo $HOME
+      register: home_output
+
+    - name: set the home variable
+      set_fact: home="{{ home_output.stdout }}"
+
     - name: known_hosts file exists
-      command: touch {{ ansible_env.HOME }}/.ssh/known_hosts creates={{ ansible_env.HOME }}/.ssh/known_hosts
+      command: touch {{ home }}/.ssh/known_hosts creates={{ home }}/.ssh/known_hosts
 
     - name: git server in known_hosts file
       lineinfile: >
-        dest={{ ansible_env.HOME }}/.ssh/known_hosts
+        dest={{ home }}/.ssh/known_hosts
         regexp=^{{item.hostname}}
         line="{{ item.hostname }} {{ item.public_key }}"
       with_items: git_servers
