Generate a searchable student roster

--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -69,3 +69,9 @@ interval = 2012-01-01-2020-01-01
 [videos]
 dropoff_threshold = 0.05
 
+[elasticsearch]
+host = http://172.17.0.1:9201/
+
+[module-engagement]
+alias = roster
+number_of_shards = 5
