--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ console_scripts =
     s3util = edx.analytics.tasks.launchers.s3util:main
 
 edx.analytics.tasks =
+    user-activity-workflow = edx.analytics.tasks.user_activity_workflow:UserActivityWorkflow
     event-type-dist = edx.analytics.tasks.event_type_dist:PushToVerticaEventTypeDistributionTask
     enrollments-report = edx.analytics.tasks.reports.enrollments:EnrollmentsByWeek
     total-enrollments-report = edx.analytics.tasks.reports.total_enrollments:WeeklyAllUsersAndEnrollments
