--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -61,3 +61,11 @@ interval = 2012-01-01-2020-01-01
 [videos]
 dropoff_threshold = 0.05
 
+[elasticsearch]
+host = http://172.17.0.1:9201/
+timeout = 60
+connection_type = urllib
+
+[module-engagement]
+alias = roster
+number_of_shards = 5
