--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ edx.analytics.tasks =
     paypal = edx.analytics.tasks.reports.paypal:PaypalTransactionsByDayTask
     ed_services_report = edx.analytics.tasks.reports.ed_services_financial_report:BuildEdServicesReportTask
     financial_reports  = edx.analytics.tasks.reports.finance_reports:BuildFinancialReportsTask
+    output-diff = edx.analytics.tasks.tools:OutputDiffTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
