Added entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ edx.analytics.tasks =
     engagement = edx.analytics.tasks.module_engagement:ModuleEngagementDataTask
     data_deidentification   = edx.analytics.tasks.data_deidentification:DeidentifyCourseDumpTask
     events_deidentification = edx.analytics.tasks.events_deidentification:DeidentifyCourseEventsTask
+    deidentification = edx.analytics.tasks.deidentification:DeidentificationTask
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
