write to a different schema

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,7 @@ edx.analytics.tasks =
     data_obfuscation   = edx.analytics.tasks.data_obfuscation:ObfuscatedCourseDumpTask
     events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
     obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
+    internal-reports = edx.analytics.tasks.load_internal:LoadInternalReports
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
