--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -70,6 +70,7 @@ interval = 2012-01-01-2020-01-01
 dropoff_threshold = 0.05
 
 [elasticsearch]
+# Point to the vagrant host's port 9201 where we assume elasticsearch is running
 host = http://172.17.0.1:9201/
 
 [module-engagement]
