--- a/config/test.cfg
+++ b/config/test.cfg
@@ -114,3 +114,10 @@ cybersource_merchant_ids = test
 
 [videos]
 dropoff_threshold = 0.05
+
+[elasticsearch]
+connection_type = aws
+
+[module-engagement]
+alias = roster
+number_of_shards = 5
