--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ edx.analytics.tasks =
     load-d-country = edx.analytics.tasks.load_internal_reporting_country:LoadInternalReportingCountryToWarehouse
     load-d-certificates = edx.analytics.tasks.load_internal_reporting_certificates:LoadInternalReportingCertificatesToWarehouse
     load-warehouse = edx.analytics.tasks.load_warehouse:LoadWarehouseWorkflow
+    load-events = edx.analytics.tasks.load_internal_reporting_events:TrackingEventRecordTask
     orders = edx.analytics.tasks.reports.orders_import:OrderTableTask
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
