--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ edx.analytics.tasks =
     load-d-course = edx.analytics.tasks.load_internal_reporting_course:LoadInternalReportingCourseToWarehouse
     load-f-user-course = edx.analytics.tasks.load_internal_reporting_user_course:LoadInternalReportingUserCourseToWarehouse
     load-d-country = edx.analytics.tasks.load_internal_reporting_country:LoadInternalReportingCountryToWarehouse
+    load-events = edx.analytics.tasks.load_internal_reporting_events:TrackingEventRecordTask
     orders = edx.analytics.tasks.reports.orders_import:OrderTableTask
     cybersource = edx.analytics.tasks.reports.cybersource:DailyPullFromCybersourceTask
     payment_reconcile = edx.analytics.tasks.reports.reconcile:ReconcileOrdersAndTransactionsTask
