Calculate views for sections and subsections

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ edx.analytics.tasks =
     data_obfuscation   = edx.analytics.tasks.data_obfuscation:ObfuscatedCourseDumpTask
     events_obfuscation = edx.analytics.tasks.events_obfuscation:ObfuscateCourseEventsTask
     obfuscation = edx.analytics.tasks.obfuscation:ObfuscatedCourseTask
+    views = edx.analytics.tasks.views:ViewDistribution
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.mapreduce:MapReduceJobRunner
