Adds pipeline task to create Problem Response CSV reports
* Stores each learner's most recent response to each problem to a CSV file for each course.
* Problems in the report are sorted by the order they appear in the course, and the username.
* Problem response report fields are configurable.
* Fetches the course list and course blocks from the REST API, and stores them
  as hive records, partitioned by date/time (partition format is configurable).

--- a/config/local.cfg
+++ b/config/local.cfg
@@ -13,3 +13,24 @@ path = /tmp/antasks/manifest/
 [enrollment-reports]
 src = /tmp/antasks/input/
 destination = /tmp/enrollment-reports/
+
+[problem-response]
+report_output_root = /tmp/problem-response-reports/
+
+[edx-rest-api]
+# Create using:
+# ./manage.py lms --settings=devstack create_oauth2_client  \
+#   http://localhost:9999  # URL doesn't matter \
+#   http://localhost:9999/complete/edx-oidc/  \
+#   confidential \
+#   --client_name "Analytics Pipeline" \
+#   --client_id oauth_id \
+#   --client_secret oauth_secret \
+#   --trusted
+client_id = oauth_id
+client_secret = oauth_secret
+base_url = http://localhost:8000
+cache_root = /tmp/edx-rest-client-output/
+
+[course-blocks]
+load_blocks_marker = /tmp/load-blocks-marker/
