--- a/config/test.cfg
+++ b/config/test.cfg
@@ -135,3 +135,18 @@ api_root_url = http://example.com/api/v1/
 
 [ccx]
 enabled = false
+
+[edx-rest-api]
+client_id = dummy_client_id
+client_secret = dummy_client_secret
+auth_url = http://localhost:8000/oauth2/access_token/
+cache_root = /tmp/edx-rest-api
+
+[problem_response]
+report_output_root = /tmp/problem-response-reports/
+
+[course-list]
+api_root_url = http://localhost:8000/api/courses/v1/courses/
+
+[course-blocks]
+api_root_url = http://localhost:8000/api/courses/v1/blocks/
