--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,9 @@ edx.analytics.tasks =
     push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
     load-course-catalog = edx.analytics.tasks.load_internal_reporting_course_catalog:PullCourseCatalogAPIData
     load-internal-database = edx.analytics.tasks.load_internal_reporting_database:ImportMysqlToVerticaTask
+    problem_response = edx.analytics.tasks.problem_response:LatestProblemResponseDataTask
+    course_list = edx.analytics.tasks.course_list:CourseListApiDataTask
+    course_blocks = edx.analytics.tasks.course_blocks:CourseBlocksApiDataTask
 
 
 mapreduce.engine =
