implement adyen payment reporting SOL-1880

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -101,6 +101,15 @@ url = http://test.api/endpoint
 timeout = -1
 interval_start = 2015-09-01
 
+[adyen]
+company_account = TestAccount
+merchant_accounts_list = EdXORG
+username = report
+password = notsosecret
+# We are using "http" here for testing purpose only, for production always use "https".
+url = http://ca-test.adyen.com/reports/download
+interval_start = 2016-08-19
+
 [cybersource:test]
 username=testuser
 password=notsosecret
