Get unit tests passing with Luigi 2.3.2.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -21,11 +21,10 @@ marker = s3://fake/marker/
 remote_log_level = DEBUG
 
 [event-logs]
-pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
-          .*tracking.notalog-(?P<date>\d{8}).*\.gz
+# pattern = [".*tracking.log-(?P<date>\d{8}).*\.gz", ".*tracking.notalog-(?P<date>\d{8}).*\.gz"]
+pattern = [".*tracking.log-(?P<date>\\\\d{8}).*\\\\.gz", ".*tracking.notalog-(?P<date>\\\\d{8}).*\\\\.gz"]
 expand_interval = 2 days
-source = s3://fake/input/
-         s3://fake/input2/
+source = ["s3://fake/input/", "s3://fake/input2/"]
 
 [segment-logs]
 pattern = .*segment.log-(?P<date>\d{8}).*\.gz
@@ -54,7 +53,7 @@ seed_value = 42
 [manifest]
 threshold = 500
 input_format = org.edx.hadoop.input.ManifestTextInputFormat
-lib_jar = s3://fake/oddjob.jar
+lib_jar = ["s3://fake/oddjob.jar"]
 path = /tmp/fake/manifest/
 
 [user-activity]
@@ -69,7 +68,7 @@ interval_start = 2013-11-01
 overwrite_n_days = 14
 
 [enrollment-reports]
-src = s3://fake/input/
+src = ["s3://fake/input/"]
 destination = s3://fake/enrollment_reports/output/
 offsets = s3://fake/enrollment_reports/offsets.tsv
 blacklist = s3://fake/enrollment_reports/course_blacklist.tsv
@@ -128,8 +127,7 @@ host=test.cybersource.com/test
 interval_start = 2015-09-01
 
 [payment]
-cybersource_merchant_ids = test
-                           empty_test
+cybersource_merchant_ids = ["test", "empty_test"]
 
 [videos]
 dropoff_threshold = 0.05
