Fixme rename class.

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ edx.analytics.tasks =
     user-activity = edx.analytics.tasks.user_activity:CourseActivityWeeklyTask
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
-    location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
+    location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUserDataTask
     grade-dist = edx.analytics.tasks.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
     enrollments = edx.analytics.tasks.enrollments:ImportEnrollmentsIntoMysql
     enrollment_validation = edx.analytics.tasks.enrollment_validation:CourseEnrollmentValidationTask
