Added schema swap for database import.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -89,6 +89,7 @@ access_token = acceptance
 credentials = s3://fake/vertica_creds.json
 schema = testing
 read_timeout = 600
+roles = analyst
 
 [payment-reconciliation]
 transaction_source = s3://fake/warehouse/transactions
