--- a/config/test.cfg
+++ b/config/test.cfg
@@ -1,8 +1,14 @@
 # Safe defaults that can be used by unit and acceptance tests.
 
+[job-conf]
+# The third-party docker containers we use run everything as "root". Setting this environment variable on all child
+# processes allows us to write to HDFS as the hadoop user instead. Otherwise we end up writing a mix of "hadoop" user
+# owned files and "root" owned files, which are often not readable by the "hadoop" user.
+mapred.child.env = HADOOP_USER_NAME=hadoop
+
 [hive]
 release = apache
-version = 0.11
+version = 1.0.0
 database = default
 warehouse_path = s3://fake/warehouse/
 
