--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,22 @@ python:
   - "2.7"
 cache: pip
 
+sudo: required
+
+env:
+  DOCKER_COMPOSE_VERSION: 1.9.0
+
+services:
+  - docker
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker-compose --version
+  - docker --version
+
 addons:
   apt:
     packages:
@@ -11,7 +27,7 @@ addons:
       - libatlas-base-dev
 
 script:
-  - make test
+  - make dev.coverage
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
