--- a/logging.cfg
+++ b/logging.cfg
@@ -6,43 +6,35 @@
 keys=root,edx_analytics,luigi_interface
 
 [handlers]
-keys=stdoutHandler,localHandler
+keys=stdoutHandler
 
 [formatters]
 keys=standard
 
 [logger_root]
-level=INFO
-handlers=localHandler
+level=DEBUG
+handlers=stdoutHandler
 
 [logger_edx_analytics]
 # Errors from edx/analytics get routed to stderr.
 level=DEBUG
-handlers=stdoutHandler,localHandler
+handlers=stdoutHandler
 qualname=edx.analytics
 propagate=0
 
 [logger_luigi_interface]
 # Errors from luigi-interface get routed to stdout.
 level=DEBUG
-handlers=stdoutHandler,localHandler
+handlers=stdoutHandler
 qualname=luigi-interface
 propagate=0
 
 [handler_stdoutHandler]
 # Define as in luigi/interface.py.
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=standard
 args=(sys.stdout,)
-
-[handler_localHandler]
-# Define as in edx-platform/common/lib/logsettings.py (for dev logging, not syslog).
-class=logging.handlers.RotatingFileHandler
-formatter=standard
-args=('edx_analytics.log', 'w')
-# 'maxBytes': 1024 * 1024 * 2,
-# 'backupCount': 5,
 
 [formatter_standard]
 # Define as in edx-platform/common/lib/logsettings.py (for dev logging, not syslog).
